--- a/references.bib
+++ b/references.bib
@@ -605,3 +605,18 @@ abstract = {  The multiple regression equation predicting lung function values f
 	url = {http://dx.doi.org/10.1016/S2213-2600(19)30204-8},
 	langid = {en}
 }
+
+@article{quanjer1993,
+	title = {Lung volumes and forced ventilatory flows},
+	author = {Quanjer, Ph.H and Tammeling, G.J. and Cotes, J.E. and Pedersen, O.F. and Peslin, R. and Yernault, J-C.},
+	year = {1993},
+	month = {03},
+	date = {1993-03-01},
+	journal = {European Respiratory Journal},
+	pages = {5--40},
+	volume = {6},
+	number = {Suppl 16},
+	doi = {10.1183/09041950.005s1693},
+	url = {http://dx.doi.org/10.1183/09041950.005s1693},
+	langid = {en}
+}
