--- a/who-is-healthy-anyways.qmd
+++ b/who-is-healthy-anyways.qmd
@@ -66,7 +66,7 @@ execute:
 
 ## Background
 
-Racial disparities in lung function measurements have been documented since the late 18^th^ century. Initially, pro-slavery scientists in the US weaponized differences in lung function to justify White supremacy [@braun2023]. Over time, this overtly racist misuse was replaced with the notion that racial differences in lung function were innate but benign, often attributed to anthropometric variations [@Agrawal2019]. In the 20th century and with the growing adoption of pre-employment spirometry as a test of fitness for certain workers, occupation standards in the US proposed race-based adjustment of spirometry results to prevent hiring discrimination against Black individuals [@townsend2022]. Subsequently, in 2005, the American Thoracic Society (ATS) and the European Respiratory Society (ERS) recommended race-specific reference equations for interpreting pulmonary function tests in clinical settings [@pellegrino2005].
+Racial disparities in lung function measurements have been documented since the late 18^th^ century. Initially, pro-slavery scientists in the US weaponized differences in lung function to justify White supremacy [@braun2023]. Over time, this overtly racist misuse was replaced with the notion that racial differences in lung function were innate but benign, often attributed to anthropometric variations [@Agrawal2019; @quanjer1993]. In the 20th century and with the growing adoption of pre-employment spirometry as a test of fitness for certain workers, occupation standards in the US proposed race-based adjustment of spirometry results to prevent hiring discrimination against Black individuals [@townsend2022]. Subsequently, in 2005, the American Thoracic Society (ATS) and the European Respiratory Society (ERS) recommended race-specific reference equations for interpreting pulmonary function tests in clinical settings [@pellegrino2005].
 
 In the past two decades, race-based lung function reference values have been widely used to guide diagnosis, assessment, and management of lung diseases, determine priority for lung transplantation, evaluate fitness for employment, and assess occupational health and insurance claims. However, there is increasing awareness of how these practices may perpetuate racial bias and exacerbate health disparities, especially considering the disproportionate environmental exposures faced by racialized populations [@vyas2020]. Emerging literature indicates that Black individuals in the US may experience harmful environmental exposures that adversely affect lung growth and function [@marciniuk2023]. Race-based normalization of lung function may overlook these issues, potentially leading to the underdiagnosis and inadequate treatment of respiratory diseases in underserved communities.
 
@@ -82,7 +82,7 @@ We used data from three cycles of NHANES (2007-2008, 2009-2010, and 2011-2012), 
 
 We carefully reviewed the NHANES variable list and selected SDoH-related variables that could affect lung function. We defined SDoH broadly to include employment and working conditions, income and social status, education, environmental exposures, healthy behaviors, stress, access to healthcare, diet, and housing. We defined 10 increasingly healthier reference populations. Starting from the base reference population of non-smokers with no diagnoses of lung diseases or respiratory symptoms, we sequentially excluded those with confirmed occupational exposures, physical inactivity, maternal smoking, obesity (defined as body-mass-index≥30), no home ownership, no insurance, lower education, and self-reported unhealthy diet.
 
-Occupational exposure was defined as exposure to either mineral dust, organic dust, exhaust fumes, or other fumes at work. Individuals who did not have at least 10 minutes of vigorous or moderate activity in a typical week, either for work or recreationally, were considered physically inactive. Lower educated individuals were defined as adults 20 years of age and older with a high school or a GED degree or lower, and 6-19 years old who were neither in school nor on vacation from school. Individuals who self-reported their dietary health as either poor or fair were considered to have an unhealthy diet. Poverty was measured as the ratio of income to federal poverty levels. We calculated allostatic load score based on twelve commonly used biomarkers, using the method proposed by Liu et al [@liu2021]. Biomarkers included were C-reactive protein, white blood cell count, glycohemoglobin, serum albumin, serum creatinine, total cholesterol, high density lipoprotein (HDL), serum triglycerides, BMI, resting systolic blood pressure, resting diastolic blood pressure measurements, and pulse rate. For each of the twelve biomarkers, the participant received a score of 1 if their value was deemed high-risk (i.e., below 25% percentile for HDL and serum albumin and above 75% percentile for other biomarkers) and 0 if low risk. Possible values for allostatic load score ranged from 0 to 12.
+Occupational exposure was defined as exposure to either mineral dust, organic dust, exhaust fumes, or other fumes at work. Individuals who did not have at least 10 minutes of vigorous or moderate activity in a typical week, either for work or recreationally, were considered physically inactive. Lower educated individuals were defined as adults 20 years of age and older with a high school or a GED degree or lower, and 6-19 years old who were neither in school nor on vacation from school. Individuals who self-reported their dietary health as either poor or fair were considered to have an unhealthy diet. Poverty was measured as the ratio of income to federal poverty levels. We calculated allostatic load score based on twelve commonly used biomarkers, using the method proposed by Liu et al [@liu2021].
 
 For each reference population, the racial gap was calculated as the average difference in forced expiratory volume in one second (FEV~1~) and forced vital capacity (FVC) between minority and majority populations adjusted by age, height, and sex in a linear regression model. We evaluated the reduction in the racial gap separately for children (\<20 yrs) and adults (≥20 yrs). The distinction between adults and children was dictated by how NHANES data are collected; for example, the educational level variable is only available for those 20 years of age and older and school attendance is more applicable to children. We repeated the main analysis separately for individuals who self-identified with different minority groups, including Non-Hispanic Black, Asian (only available in NHANES 2011-2012), Mexican American, Other Hispanic, and Other/Multiracial. The analysis was done with appropriate 6-year sampling weights to account for complex survey design.
 
@@ -502,7 +502,7 @@ return(refs)
 
 #### Participants
 
-Of the 30,442 participants in NHANES 2007-2012, we included 17,032 participants who had high-quality spirometry. Excluding smokers and individuals with respiratory diagnoses or symptoms led to 8,802 participants, including 4,832 adults and 3,970 children (@fig-flowchart). Participant flow across successive reference populations is provided in the appendix (@suppfig-flowrefs). Characteristics of participants are summarized in @tbl-table1.
+Of the 30,442 participants in NHANES 2007-2012, we included 17,032 participants who had high-quality spirometry. Excluding smokers and individuals with respiratory diagnoses or symptoms led to 8,802 participants (@fig-flowchart), including 4,832 adults (57.4% female) and 3,970 children (50.8% female). Participant flow across successive reference populations is provided in the appendix (@suppfig-flowrefs). Characteristics of participants are summarized in @tbl-table1.
 
 ```{r}
 
@@ -1379,7 +1379,7 @@ Changes in lung function racial gaps between Other/Multiracial and Non-Hispanic 
 
 ### Allostatic Load
 
-Excluding participants who had allostatic load score of 1 or higher reduced racial gap in FEV~1~ and FVC by 37.5 mL (10.7%) and 34.6 mL (8.3%) in children and by 105.0 mL (20.9%) and 100.2 mL (14.6%) in adults.
+Biomarkers included were C-reactive protein, white blood cell count, glycohemoglobin, serum albumin, serum creatinine, total cholesterol, high density lipoprotein (HDL), serum triglycerides, BMI, resting systolic blood pressure, resting diastolic blood pressure measurements, and pulse rate. For each of the twelve biomarkers, the participant received a score of 1 if their value was deemed high-risk (i.e., below 25% percentile for HDL and serum albumin and above 75% percentile for other biomarkers) and 0 if low risk. Possible values for allostatic load score ranged from 0 to 12. Excluding participants who had allostatic load score of 1 or higher reduced racial gap in FEV~1~ and FVC by 37.5 mL (10.7%) and 34.6 mL (8.3%) in children and by 105.0 mL (20.9%) and 100.2 mL (14.6%) in adults.
 
 ::: {#suppfig-allostaticload}
 ```{r, warning=FALSE, message=FALSE}
