more refs added

--- a/references.bib
+++ b/references.bib
@@ -620,3 +620,30 @@ abstract = {  The multiple regression equation predicting lung function values f
 	url = {http://dx.doi.org/10.1183/09041950.005s1693},
 	langid = {en}
 }
+
+@article{hegewald2007,
+	title = {Socioeconomic Status and Lung Function},
+	author = {Hegewald, Matthew J. and Crapo, Robert O.},
+	year = {2007},
+	month = {11},
+	date = {2007-11},
+	journal = {Chest},
+	pages = {1608--1614},
+	volume = {132},
+	number = {5},
+	doi = {10.1378/chest.07-1405},
+	url = {http://dx.doi.org/10.1378/chest.07-1405},
+	langid = {en}
+}
+
+@article{Steinberg1986,
+  title={Socio-environmental factors and lung function.},
+  author={M Steinberg and Margaret R. Becklake},
+  journal={South African medical journal = Suid-Afrikaanse tydskrif vir geneeskunde},
+  year={1986},
+  volume={70 5},
+  pages={
+          270-4
+        },
+  url={https://api.semanticscholar.org/CorpusID:4610119}
+}
